# taras-tg-ai

./: .gitignore  Cargo.toml
src/: main.rs
src/config/: secrets.example.rs
src/handlers/: gemini.rs
src/utils/: requests.rs
