[package]
name = "tgm-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { version = "1.0.128" }
reqwest = { version = "0.12.7", features = ["json"] }
teloxide = "0.13.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.39.0", features = ["full"] }
env_logger = "0.11.5"
log = "0.4.22"
shuttle-runtime = "0.47.0"
